--- a/Newsletter-Signup/package.json
+++ b/Newsletter-Signup/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "bootstrap": "^5.2.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "requests": "^0.3.0"
   }
 }
