--- a/Fruits-Project/package.json
+++ b/Fruits-Project/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^4.9.0"
+    "mongodb": "^4.9.0",
+    "mongoose": "^6.5.2"
   }
 }
